Thu May 15 12:36:42 UTC 2008  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/MMAP_Memory_Pool.cpp:
          When using a default base address of 0x0 and otherwise wanting
          a fixed address, a special flag was used to imply that after the
          first address is selected the system in a call to ::mmap() 
          subsequent calls to ::mmap() reuse the selected base address
          as a fixed address. This may cause problems with reloading
          persistent data if the stored data contains pointers and the 
          system selected base address changes from run to run.
	
        * ace/config-linux-common.h:
          The default base address for the x86-64 platform cannot be 0x0.
          Doing so causes the system to choose an address which for some
          unknown reason causes SEGV errors in Malloc_T. The linux-specific
          mmap flag, MAP_32BIT, resolves those segv errors, but on x86-64
          using 0x0 as the default base address on subsequent runs cause
          a different assigned base address to be selected. If the data
          in the mapped memory contains pointers to mapped memory, those
          are then wrong and cause SEGV crashs. By experimentation, it
          seems the default base address for powerpc is appropriate for
          x86-64.
          
Thu May 15 10:19:15 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/rules.lib.GNU:
          Fixed OpenVMS specific part

Thu May 15 10:17:15 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Unbounded_Set_Ex.cpp:
          Fixed bug in the insert method

        * ace/Unbounded_Set_Test.cpp:
          Extended this test to reproduce the bug above and replaced all
          ACE_ASSERTS with if checks

Thu May 15 10:05:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * bin/msvc_mpc_auto_compile.pl:
          Split orbsvcs out from ciao build.
