@@ -2243,6 +2243,7 @@ Alain Kocelniak <alain at corys dot fr>
 Alvaro Vega Garcia <avega at tid dot es>
 Fernando C. Jeronymo <fernando dot fcavalcanti at gmail.com>
 Tim <tim at burmair dot com>
+Thomas Brownridge <thomas dot brownridge at lmco dot com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
